# ehv-runtime

./: .gitignore  CITATION.cff  EHV.cfg  EHV.tla  LIMITATIONS.md  Makefile  README.md  REPORT.md  pyproject.toml
bench/: measure_enforcement.py  sev_snp_benchmark.py
bench/output/: actual_enforcement_latency.csv  benchmark_summary.json  benchmark_summary.md  latency_results.csv  throughput_results.csv
docs/: ARCHITECTURE.md
ehv/compiler/: engine.py  gbom.py
ehv/enclave/: enclave.py
ehv/gcd/: __init__.py  dfa.py  grammar.py  masker.py
ehv/identity/: __init__.py  workload.py
ehv/sync/: network.py  store.py  vclock.py
examples/: anthropic_redteam.py  clinical_dosage.py  gcd_dosage.py  latency_bench.py
experiments/: crdt_convergence.py  epoch_staleness.py  gbom_audit.py
tests/: __init__.py  test_enclave.py  test_engine.py  test_gbom.py  test_gcd.py  test_identity.py  test_oscal.py  test_store.py  test_vclock.py
